@@ -1,3 +1,11 @@
+2014-09-09  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+    * STBytecodeInterpreter.m (-sendSelectorAtIndex:withArgCount:):
+    * STCompiler.m (-compileString:, -emitPopAndStoreTemporary:,
+	-emitPopAndStoreVariable:, -emitPopAndStoreReceiverVariable:,
+	-emitSendSelector:argCount:):
+    Fix NSDebugLLog format issues detect by clang.
+
 2013-06-30  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
     * STSourceReader.m (-lineNumberForIndex:, -readNextToken): Tidy
